// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Synopsis should render a correctly 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #6E6E73;
  padding-bottom: 2 * 1rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<p
  class="c0"
>
  This is text in a paragraph.
</p>
`;

exports[`Synopsis should render correctly with arabic script typography values 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #6E6E73;
  padding-bottom: 2 * 1rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

<p
  class="c0"
>
  بعض محتوى النص
</p>
`;
